# rust-discord-bot

./: .gitignore  Cargo.toml  README.md  replit.nix
.github/ISSUE_TEMPLATE/: command-request.md
src/: command_base.rs  commands.rs  emoji_commands.rs  general_commands.rs  main.rs  moderator_commands.rs  pepito.rs  picture_commands.rs
