[package]
name = "rustybot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version="1.38.1", features=["full"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]
